[gd_scene load_steps=12 format=3 uid="uid://buupi2ckdixn3"]

[ext_resource type="Script" path="res://star_background.gd" id="1_1expw"]
[ext_resource type="Shader" path="res://Visual assets/Background/Texture_scroller_stars1.gdshader" id="2_pfsmk"]
[ext_resource type="Texture2D" uid="uid://bahr605yfp0l4" path="res://Visual assets/Textures/Tile_stars_3.png" id="3_pfjam"]
[ext_resource type="Shader" path="res://Visual assets/Background/Texture_scroller_stars2.gdshader" id="4_ick6g"]
[ext_resource type="Texture2D" uid="uid://mla2mnmbvir2" path="res://Visual assets/Textures/Tile_stars_2.png" id="4_iybip"]
[ext_resource type="Shader" path="res://Visual assets/Background/Texture_scroller_stars3.gdshader" id="6_nmvxr"]
[ext_resource type="Shader" path="res://mission_post_processing.gdshader" id="6_vj3kp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_48x1d"]
shader = ExtResource("2_pfsmk")
shader_parameter/scroll_speed = 0.007
shader_parameter/angle_degrees = 0.0
shader_parameter/repeat_x = 2.0
shader_parameter/repeat_y = 2.0
shader_parameter/row_offset = 0.0
shader_parameter/texture_to_scroll = ExtResource("3_pfjam")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i51cy"]
shader = ExtResource("4_ick6g")
shader_parameter/scroll_speed = 0.004
shader_parameter/angle_degrees = 20.0
shader_parameter/repeat_x = 3.0
shader_parameter/repeat_y = 3.0
shader_parameter/row_offset = 0.0
shader_parameter/texture_to_scroll = ExtResource("4_iybip")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bdohu"]
shader = ExtResource("6_nmvxr")
shader_parameter/scroll_speed = 0.002
shader_parameter/angle_degrees = 40.0
shader_parameter/repeat_x = 4.0
shader_parameter/repeat_y = 4.0
shader_parameter/row_offset = 0.0
shader_parameter/texture_to_scroll = ExtResource("3_pfjam")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hsim5"]
shader = ExtResource("6_vj3kp")
shader_parameter/effect_amount = 1.8

[node name="StarBackground" type="Node2D"]
script = ExtResource("1_1expw")

[node name="Stars1" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_48x1d")
custom_minimum_size = Vector2(1920, 1080)
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Stars2" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_i51cy")
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0

[node name="Stars3" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_bdohu")
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0

[node name="Fisheye Effect" type="Polygon2D" parent="."]
material = SubResource("ShaderMaterial_hsim5")
polygon = PackedVector2Array(-49, -28, -32, 1100, 1956, 1109, 1954, -54)
